chore: add R$ in index.js

--- a/index.htm
+++ b/index.htm
@@ -25,7 +25,7 @@
           <div class="mb-3">
             <label for="exampleInputWage" class="form-label">Meu Salário</label>
             <div class="input-group">
-              <span class="input-group-text">$</span>
+              <span class="input-group-text">R$</span>
               <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
               <span class="input-group-text">.00</span>
             </div>
@@ -37,7 +37,7 @@
             <div class="mb-2 col-sm-6">
               <label for="exampleInputWage" class="form-label">Dívida 1</label>
               <div class="input-group">
-                <span class="input-group-text">$</span>
+                <span class="input-group-text">R$</span>
                 <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
                 <span class="input-group-text">.00</span>
               </div>
@@ -48,7 +48,7 @@
             <div class="mb-2 col-sm-6">
               <label for="exampleInputWage" class="form-label">Dívida 2</label>
               <div class="input-group">
-                <span class="input-group-text">$</span>
+                <span class="input-group-text">R$</span>
                 <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
                 <span class="input-group-text">.00</span>
               </div>
